# CubeRun

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
assets/audio/: credits.txt
assets/scenes/: game.yaml
assets/shaders/: basic.glsl  batch.glsl  camera.glsl  font.glsl  shader.glsl
libs/freetype/builds/unix/: config.status  freetype-config  freetype2.pc  ftoption.h  libtool  unix-cc.mk  unix-def.mk
libs/freetype/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  svg.lo  (+5 more)
libs/freetype/objs/.libs/: libfreetype.lai  libfreetype.so.6.20.1
libs/include/glad/: gl.h
libs/stb_image/: stb_image.cpp
scripts/: build_and_run.sh
src/: main.cpp
src/core/: defines.h  event.cpp  event.h  game.cpp  game.h  input.cpp  input.h  window.cpp  window.h
src/editor/: editor.cpp  editor.h
src/engine/: defines.h
src/engine/audio/: audio_system.cpp  audio_system.h  music_type.h  sound_type.h
src/engine/core/: clock.cpp  clock.h  event.cpp  event.h  game.cpp  game.h  input.cpp  input.h  window.cpp  window.h
src/engine/file/: file.cpp  file.h
src/engine/graphics/: camera.cpp  camera.h  font.cpp  font.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  texture.cpp  texture.h
src/engine/math/: rand.cpp  rand.h
src/entities/: platform.cpp  platform.h  player.cpp  player.h
src/game/: game.cpp  game.h
src/game/entities/: entity_manager.cpp  entity_manager.h  obsticle.cpp  obsticle.h  player.cpp  player.h
src/game/physics/: body.cpp  body.h  collider.cpp  collider.h  physics_world.cpp  physics_world.h
src/game/scenes/: game_scene.cpp  game_scene.h  menu_overlay.cpp  menu_overlay.h  over_overlay.cpp  over_overlay.h  overlay_type.h  scene_manager.cpp  scene_manager.h  scene_overlay.h  serializer.cpp  serializer.h
src/game/ui/: button.cpp  button.h  text.cpp  text.h  ui_anchor.h
src/graphics/: camera.cpp  camera.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/managers/: audio_manager.cpp  audio_manager.h  resource_manager.cpp  resource_manager.h  scene_manager.cpp  scene_manager.h
src/scenes/: game_scene.cpp  game_scene.h  scene_type.h
src/utils/: utils.cpp  utils.h
